# deferred-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: bloom_combine.frag  deferred_geometry.frag  deferred_geometry.vert  deferred_hdr_lighting.frag  deferred_hdr_lighting.vert  forward.frag  forward.vert  g_geometry.frag  g_geometry.vert  g_lighting.frag  gaussian_blur.frag  gaussian_blur.vert  geometry.frag  hdr_lighting.frag  plain.frag  plain.vert  shader.frag  shader.vert  tonemap.frag
cmake/modules/: FindAssimp.cmake  FindGLFW.cmake
include/: Application.h  DeferredRenderer.h  Engine.h  FBO.h  ForwardRenderer.h  GBuffer.h  IRenderer.h  Light.h  Mesh.h  Model.h  Quad.h  Renderer.h  Shader.h  ShaderManager.h  ShaderPipeline.cpp  ShaderPipeline.h  Texture.h  Vertex.h  camera.h  sceneloader.h
src/: Application.cpp  DeferredRenderer.cpp  Engine.cpp  FBO.cpp  ForwardRenderer.cpp  GBuffer.cpp  Mesh.cpp  Model.cpp  Quad.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  main.cpp  sceneloader.cpp
